Holding Ctrl right after trackpad scrolling makes unwanted zoom (OSX) #45167

Closed
opened 2015-06-24 00:28:02 +02:00 by Kris Slazinski · 11 comments

System Information
Operating system and graphics card
OSX 10.10.3, NVIDIA GeForce 320M 256 MB

Blender Version
Broken: 2.75 RC1 bff8b5d

Short description of error
Scrolling panels in Blender sometimes makes them zoom when user doesn't want it.

Exact steps for others to reproduce the error

  1. Open default scene and press N to show Properties (this is what I have on screenshots, but it works the same with every panel).
  2. Move 2 fingers on macbook's trackpad to scroll
  3. Release fingers and immediately press and hold CTRL
  4. Result: Blender zooms in or out depending on if you were scrolling up or down.

Please see attached images: before and after scrolling.

zoom-1.png

zoom-2.png

**System Information** Operating system and graphics card OSX 10.10.3, NVIDIA GeForce 320M 256 MB **Blender Version** Broken: 2.75 RC1 bff8b5d **Short description of error** Scrolling panels in Blender sometimes makes them zoom when user doesn't want it. **Exact steps for others to reproduce the error** 1. Open default scene and press N to show Properties (this is what I have on screenshots, but it works the same with every panel). 2. Move 2 fingers on macbook's trackpad to scroll 3. Release fingers and immediately press and hold CTRL 4. Result: Blender zooms in or out depending on if you were scrolling up or down. Please see attached images: before and after scrolling. ![zoom-1.png](https://archive.blender.org/developer/F197003/zoom-1.png) ![zoom-2.png](https://archive.blender.org/developer/F197004/zoom-2.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mallow

Added subscriber: @mallow
Author

This thing happens not only to panels, but also in 3D View, as I just checked.

This thing happens not only to panels, but also in 3D View, as I just checked.
Campbell Barton changed title from using Ctrl right after scrolling makes unwanted zoom to Holding Ctrl right after trackpad scrolling makes unwanted zoom (OSX) 2015-06-24 05:28:56 +02:00

Added subscriber: @fsiddi

Added subscriber: @fsiddi
Martijn Berger was assigned by Bastien Montagne 2015-06-27 16:24:36 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@MartijnBerger, feel free to poke me if this needs some attention/tweaks in WM event system (although it should better be solved on GHOST level).

@MartijnBerger, feel free to poke me if this needs some attention/tweaks in WM event system (although it should better be solved on GHOST level).

Added subscriber: @brecht

Added subscriber: @brecht

The problem is the inertial scrolling where it keeps scrolling a while longer after you release the trackpad.

Perhaps the proper way to solve this would be to have a modal event handler that checks if the ctrl key is pressed when you start scrolling, and ignores any changes to the ctrl key as long as you're scrolling. The problem is that the way these events are implemented there is no start scrolling / stop scrolling event, it a separate event for every scrolling increment.

The problem is the inertial scrolling where it keeps scrolling a while longer after you release the trackpad. Perhaps the proper way to solve this would be to have a modal event handler that checks if the ctrl key is pressed when you start scrolling, and ignores any changes to the ctrl key as long as you're scrolling. The problem is that the way these events are implemented there is no start scrolling / stop scrolling event, it a separate event for every scrolling increment.

This issue was referenced by 240f356166

This issue was referenced by 240f356166e70dc495b44a4628d36181c93ff1a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45167
No description provided.