Fix T45167: OS X inertial scrolling can lead to unexpected zooming.

Differential Revision: https://developer.blender.org/D1539